--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src=<img src="https://storage.googleapis.com/acciojob-open-file-collections/pricing-card.png" alt="card" width="630" height="806">
+	<img src="https://storage.googleapis.com/acciojob-open-file-collections/pricing-card.png" alt="card" width="630" height="806">
     <script type="text/javascript" src="./script.js">
 </script>
 
